# cacao-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
multidid/: Cargo.toml
multidid/src/: error.rs  key.rs  lib.rs  method.rs  pkh.rs
multidid/tests/: valid.json
src/: generic.rs  lib.rs  siwe.rs  siwe_cacao.rs  zcap.rs
src/v1/: mod.rs  siwe_cacao.rs
src/v2/: common.rs  either.rs  mod.rs  recap_cacao.rs  serde_util.rs  ucan_cacao.rs  version.rs
src/v3/: common.rs  mod.rs  payload.rs  recap_cacao.rs  ucan_cacao.rs  version.rs  webauthn.rs
varsig/: Cargo.toml
varsig/src/: eip191.rs  either.rs  lib.rs  traits.rs
varsig/src/common/: ecdsa.rs  ed25519.rs  mod.rs  rsa.rs  webauthn.rs
