[package]
name = "cacaos"
version = "0.2.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
description = "Core library for CACAO traits and data structures"
repository = "https://github.com/spruceid/cacao/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
eip4361 = ["hex", "ethers-core"]
default = ["eip4361"]

[dependencies]
siwe = { git = "https://github.com/spruceid/siwe-rs.git", rev = "1387ac6" }
iri-string = { version = "0.4", features = ["serde", "serde-std"] }
thiserror = "1.0"
url = "2.2"
async-trait = "0.1"
serde = "1.0"
libipld = "0.12"
serde_with = "1.11"
http = "0.2.5"
hex = { version = "0.4", optional = true }
ethers-core = { version = "0.6.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
