[package]
name = "cacaos"
version = "0.5.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
description = "Core library for CACAO traits and data structures"
repository = "https://github.com/spruceid/cacao-rs/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
eip4361 = ["hex"]
default = ["eip4361"]

[dependencies]
siwe = "0.5"
iri-string = { version = "0.6", features = ["serde"] }
thiserror = "1.0"
url = "2.2"
async-trait = "0.1"
serde = "1.0"
libipld = { version = "0.16", default-features = false, features = ["dag-cbor", "derive", "serde-codec"]}
serde_with = "2.0"
time = { version = "0.3", features = ["parsing", "formatting"] }
http = "0.2.5"
hex = { version = "0.4", optional = true }

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
