[package]
name = "cacaos"
version = "0.5.1"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
description = "Core library for CACAO traits and data structures"
repository = "https://github.com/spruceid/cacao-rs/"

[workspace]
members = ["varsig", "multidid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
eip4361 = ["hex"]
default = ["eip4361"]

[dependencies]
siwe = "0.5"
iri-string = { version = "0.6", features = ["serde"] }
thiserror = "1.0"
url = "2.2"
async-trait = "0.1"
serde = "1"
serde_json = "1"
libipld = { version = "0.16", default-features = false, features = ["derive", "serde-codec", "dag-cbor"]}
ucan-capabilities-object = "0.1"
ssi-ucan = { git = "https://github.com/spruceid/ssi.git", branch = "feat/ucan-0.10" }
ssi-jwk = { git = "https://github.com/spruceid/ssi.git", branch = "feat/ucan-0.10"  }
ssi-jwt = { git = "https://github.com/spruceid/ssi.git", branch = "feat/ucan-0.10"  }
ssi-dids = { git = "https://github.com/spruceid/ssi.git", branch = "feat/ucan-0.10"  }
time = { version = "0.3", features = ["parsing", "formatting", "serde"] }
http = "0.2.5"
hex = { version = "0.4", optional = true }
varsig = { version = "0.1", path = "./varsig" }
multidid = { version = "0.1", path = "./multidid" }
siwe-recap = { version = "0.2" }

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
