[package]
name = "varsig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde", "webauthn"]
webauthn = ["serde", "dep:passkey-types", "dep:serde_json", "dep:coset"]
serde = ["dep:serde"]

[dependencies]
unsigned-varint = { version = "0.7", features = ["std"] }
thiserror = "1"
serde = { version = "1", optional = true }
passkey-types = { version = "0.1", optional = true }
serde_json = { version = "1", optional = true }
coset = { version = "0.3", optional = true }
